Project

General

Profile

Actions

Bug #55828

closed

dbstore crash in delete_stale_objs

Added by Casey Bodley almost 2 years ago. Updated almost 2 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
dbstore
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

a crash in the rgw/dbstore suite during radosgw-admin -n client.0 user rm --uid foo.client.0 --purge-data --cluster ceph:

2022-06-02T08:35:56.990 INFO:teuthology.orchestra.run.smithi148.stderr:*** Caught signal (Segmentation fault) **
2022-06-02T08:35:56.990 INFO:teuthology.orchestra.run.smithi148.stderr: in thread 7f1970bc9700 thread_name:db_gc
2022-06-02T08:35:56.990 INFO:teuthology.orchestra.run.smithi148.stderr:2022-06-02T08:35:56.988+0000 7f1973090cc0 20 Bind parameter text for index(1) in stmt(0x7f196800ff68) is testbuck2
2022-06-02T08:35:57.018 INFO:teuthology.orchestra.run.smithi148.stderr: ceph version 17.0.0-12690-gbed70513 (bed70513834fdf03dc1eda2ec00ff7b66307af41) quincy (dev)
2022-06-02T08:35:57.018 INFO:teuthology.orchestra.run.smithi148.stderr: 1: /lib/x86_64-linux-gnu/libpthread.so.0(+0x143c0) [0x7f1976cf63c0]
2022-06-02T08:35:57.018 INFO:teuthology.orchestra.run.smithi148.stderr: 2: pthread_mutex_lock()
2022-06-02T08:35:57.018 INFO:teuthology.orchestra.run.smithi148.stderr: 3: sqlite3_clear_bindings()
2022-06-02T08:35:57.018 INFO:teuthology.orchestra.run.smithi148.stderr: 4: (SQLiteDB::Reset(DoutPrefixProvider const*, sqlite3_stmt*)+0x15) [0x55a5785666c5]
2022-06-02T08:35:57.018 INFO:teuthology.orchestra.run.smithi148.stderr: 5: (SQLDeleteStaleObjectData::Execute(DoutPrefixProvider const*, rgw::store::DBOpParams*)+0x2ce) [0x55a5785d581e]
2022-06-02T08:35:57.030 INFO:teuthology.orchestra.run.smithi148.stderr: 6: (rgw::store::DB::ProcessOp(DoutPrefixProvider const*, std::basic_string_view<char, std::char_traits<char> >, rgw::store::DBOpParams*)+0x2e8) [0x55a57898f3f8]
2022-06-02T08:35:57.031 INFO:teuthology.orchestra.run.smithi148.stderr: 7: (rgw::store::DB::delete_stale_objs(DoutPrefixProvider const*, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, unsigned int)+0x109c) [0x55a5789b53dc]
2022-06-02T08:35:57.031 INFO:teuthology.orchestra.run.smithi148.stderr: 8: (rgw::store::DB::GC::entry()+0x476) [0x55a5789b6d56]
2022-06-02T08:35:57.031 INFO:teuthology.orchestra.run.smithi148.stderr: 9: /lib/x86_64-linux-gnu/libpthread.so.0(+0x8609) [0x7f1976cea609]
2022-06-02T08:35:57.031 INFO:teuthology.orchestra.run.smithi148.stderr: 10: clone()
2022-06-02T08:35:57.031 INFO:teuthology.orchestra.run.smithi148.stderr:2022-06-02T08:35:56.992+0000 7f1970bc9700 -1 *** Caught signal (Segmentation fault) **
2022-06-02T08:35:57.031 INFO:teuthology.orchestra.run.smithi148.stderr: in thread 7f1970bc9700 thread_name:db_gc

from http://qa-proxy.ceph.com/teuthology/cbodley-2022-06-01_19:25:46-rgw-master-distro-default-smithi/6858865/teuthology.log

Actions #1

Updated by Casey Bodley almost 2 years ago

  • Assignee set to Soumya Koduri
Actions #2

Updated by Soumya Koduri almost 2 years ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 46829
Actions #3

Updated by Soumya Koduri almost 2 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF